# mocode

./: .gitignore  Package.swift  README.md  project.yml
.DerivedData/: info.plist
.DerivedData/ModuleCache.noindex/: AVFAudio-5S220X923F7BX0JKNDN7J78ZD.pcm  AVRouting-DSOUMKDQ2R8RBIST2551EBU9G.pcm  Accessibility-2CB9MIFS2PORH6LFCI0IGPCOU.pcm  Accessibility-33KNQFMT3LWXUB4N9GZJMT483.pcm  Accessibility-DR4CJ4K8POX0VSIXROYPPCK0O.pcm  AudioToolbox-9S3T2W7FTEDBHVET72FW4WOBY.pcm  AuthenticationServices-ETA5RM0FNZYY5I10OB1Y6Q0F9.pcm  CFNetwork-1ZRFICZKQULIBTNZDLG7N6HC8.pcm  CFNetwork-975F60WM3OTGQJ4XSN7BJXMKG.pcm  CFNetwork-E0F5IC40MX54TFCRNGHNLZNXK.pcm  CommonCrypto-CVGWZE15ML3QODC3YBGBF2P2A.pcm  CoreAudio-E9EE16ZRN1JUD6K9W64CFWEUC.pcm  CoreAudioTypes-ZI46B61D7M6EGTK31MQ96GC6.pcm  CoreData-6384046N8RR9J3O6NRRF7VXEE.pcm  CoreData-95ZJYR2GCKK144BQBM37XIM8F.pcm  CoreData-DJ94QDO40S125C9XZH3TF6RBA.pcm  CoreFoundation-8AZSECV5AOTKQ2PAE0Y0IQLVF.pcm  CoreFoundation-AVAUO2XK6JS4NVVCGK3VTM0HC.pcm  CoreFoundation-DO0EZNSNVR9NHY0A91ENETNZ9.pcm  CoreGraphics-BD56SBAWAAO226I3V581UVQUK.pcm  CoreGraphics-C9TE8IUEZ7IN65J0DA04DPL7X.pcm  CoreGraphics-DS8RFVDYJ2RNTWWD52LQRX1G3.pcm  CoreImage-2EPNO0WMKK5YU5VG694S9R1WC.pcm  CoreImage-C732YQDDUI0QTYWHH2FGH6TWD.pcm  CoreImage-ED2HM8XZJSE582BA7RZLH4J6J.pcm  CoreLocation-CF7CPF0D68H0P0I5OHL36SY4R.pcm  CoreMIDI-2F4A8LRRG0XCEYQ1BRDZMICZD.pcm  CoreMedia-EO7VFRS5Z8QQF77IU4LWQAC6H.pcm  (+125 more)
Mocode.xcodeproj/: project.pbxproj
claude-bridge/: Cargo.toml
claude-bridge/src/: claude_runner.rs  handlers.rs  main.rs  protocol.rs  session.rs  transport.rs
(+2165 files in other folders)
